# jira-to-md-todo

./: .gitignore  Cargo.toml  README.md  settings.toml
src/: configuration.rs  issue.rs  main.rs
