[package]
name = "jira-to-md-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
config =  { version = "0.13.1", features = ["toml"] }
reqwest = { version = "0.11", features = ["cookies", "cookie_store", "json"] }
rpassword = "6.0.1"
serde = "1.0.137"
serde_json = "1.0.81"
tokio = { version = "1", features = ["full"] }
